[project]
name = "incident-prediction-jetbrains"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pytorch-lightning>=2.6.1",
    "setuptools==70.0.0",
    "tensorboard>=2.20.0",
]
